--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 
             
             window.onload = function() {
-                document.getElementById('speech').addEventListener('mouseover', function () {minnie.play(); });
-                document.getElementById('spin').addEventListener('mouseover', function () {spins.play(); });
-                document.getElementById('heart').addEventListener('mouseover', function () {wind.play(); });
-                document.getElementById('skull').addEventListener('mouseover', function () {fire.play(); });
-                document.getElementById('crack').addEventListener('mouseover', function () {crack.play(); });
-                document.getElementById('demon').addEventListener('mouseover', function () {fly.play(); });
-                document.getElementById('god').addEventListener('mouseover', function () {windchimes.play(); });
-                document.getElementById('hell').addEventListener('mouseover', function () {bubble.play(); });
-                document.getElementById('6heads').addEventListener('mouseover', function () {sad.play(); });
+                document.getElementById('speech').addEventListener('mousedown', function () {minnie.play(); });
+                document.getElementById('spin').addEventListener('mousedown', function () {spins.play(); });
+                document.getElementById('heart').addEventListener('mousedown', function () {wind.play(); });
+                document.getElementById('skull').addEventListener('mousedown', function () {fire.play(); });
+                document.getElementById('crack').addEventListener('mousedown', function () {crack.play(); });
+                document.getElementById('demon').addEventListener('mousedown', function () {fly.play(); });
+                document.getElementById('god').addEventListener('mousedown', function () {windchimes.play(); });
+                document.getElementById('hell').addEventListener('mousedown', function () {bubble.play(); });
+                document.getElementById('6heads').addEventListener('mousedown', function () {sad.play(); });
             };
         </script>
 
