--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
         <title>Icon Template Percentage</title>
@@ -36,21 +35,39 @@
     <body>
 
         <div class="row">
-            <div class="left-column"><div class="image-container"><img id="6heads" src="img/1.png" height="220" width="200"/></div></div>
-            <div class="right-column"><div class="image-container"><img id="spin" src="img/3.png" height="200" width="210"/></div></div>
-            <div class="center-column"><div class="image-container"><img id="heart" src="img/2.png" height="200" width="200"/></div></div>
+            <div class="left-column"><div class="image-container"><img id="6heads" src="img/1.png" height="200" width="200"
+                onmouseover= "this.src='img/1g.png';"
+                onmouseout= "this.src='img/1.png'"/></div></div>
+            <div class="right-column"><div class="image-container"><img id="spin" src="img/3.png" height="200" width="200"
+                onmouseover= "this.src='img/3g.png';"
+                onmouseout= "this.src='img/3.png'"/></div></div></div></div>
+            <div class="center-column"><div class="image-container"><img id="heart" src="img/2.png" height="200" width="200"
+                onmouseover= "this.src='img/2g.png';"
+                onmouseout= "this.src='img/2.png'"/></div></div></div></div>
         </div>
 
         <div class="row">
-            <div class="left-column"><div class="image-container"><img id="speech" src="img/4.png" height="200" width="200"/></div></div>
-            <div class="right-column"><div class="image-container"><img id="skull" src="img/6.png" height="200" width="200"/></div></div>
-            <div class="center-column"><div class="image-container"><img id="crack" src="img/5.png" height="200" width="200"/></div></div>
+            <div class="left-column"><div class="image-container"><img id="speech" src="img/4.png" height="200" width="200"
+                onmouseover= "this.src='img/4g.png';"
+                onmouseout= "this.src='img/4.png'"/></div></div></div></div>
+            <div class="right-column"><div class="image-container"><img id="skull" src="img/6.png" height="200" width="200"
+                onmouseover= "this.src='img/6g.png';"
+                onmouseout= "this.src='img/6.png'"/></div></div></div></div>
+            <div class="center-column"><div class="image-container"><img id="crack" src="img/5.png" height="200" width="200"
+                onmouseover= "this.src='img/5g.png';"
+                onmouseout= "this.src='img/5.png'"/></div></div></div></div>
         </div>
 
         <div class="row">
-            <div class="left-column"><div class="image-container"><img id="demon" src="img/7.png" height="200" width="200"/></div></div>
-            <div class="right-column"><div class="image-container"><img id="hell" src="img/9.png" height="200" width="200"/></div></div>
-            <div class="center-column"><div class="image-container"><img id="god" src="img/8.png" height="200" width="190"/></div></div>
+            <div class="left-column"><div class="image-container"><img id="demon" src="img/7.png" height="200" width="200"
+                onmouseover= "this.src='img/7g.png';"
+                onmouseout= "this.src='img/7.png'"/></div></div></div></div>
+            <div class="right-column"><div class="image-container"><img id="hell" src="img/9.png" height="200" width="200"
+                onmouseover= "this.src='img/9g.png';"
+                onmouseout= "this.src='img/9.png'"/></div></div></div></div>
+            <div class="center-column"><div class="image-container"><img id="god" src="img/8.png" height="200" width="200"
+                onmouseover= "this.src='img/8g.png';"
+                onmouseout= "this.src='img/8.png'"/></div></div></div></div>
         </div>
 
         <script>
